--- a/pom.xml
+++ b/pom.xml
@@ -89,6 +89,12 @@
             <version>1.2.16</version>
         </dependency>
 
+        <dependency>
+            <groupId>dom4j</groupId>
+            <artifactId>dom4j</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+
     </dependencies>
 
     <pluginRepositories>
