--- a/pom.xml
+++ b/pom.xml
@@ -31,14 +31,6 @@
         </dependency>
 
         <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.11</version>
-            <scope>test</scope>
-        </dependency>
-
-
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
             <version>3.0.5.RELEASE</version>
@@ -103,18 +95,18 @@
             <scope>test</scope>
         </dependency>
 
-    </dependencies>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>5.1.6</version>
+        </dependency>
 
-    <pluginRepositories>
-        <pluginRepository>
-            <id>c5-public-repository</id>
-            <url>http://mvn.carbonfive.com/public</url>
-        </pluginRepository>
-    </pluginRepositories>
+    </dependencies>
 
     <build>
         <finalName>wechat-server</finalName>
         <plugins>
+
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
@@ -144,6 +136,19 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.flywaydb</groupId>
+                <artifactId>flyway-maven-plugin</artifactId>
+                <version>3.2.1</version>
+                <configuration>
+                    <driver>com.mysql.jdbc.Driver</driver>
+                    <url>jdbc:mysql://localhost/xiaohei-wechat</url>
+                    <user>lem</user>
+                    <password>hawk1991</password>
+                    <initOnMigrate>true</initOnMigrate>
+                </configuration>
             </plugin>
             <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
