--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,12 @@
             <version>5.1.6</version>
         </dependency>
 
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
